{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 40,
  "lineage": "2292892e-60eb-a6cb-a333-d82ebcd99c26",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01cf553b4912fe823",
            "domain": "vpc",
            "id": "eipalloc-07935963318614df7",
            "network_interface": "eni-088364b5fc5b0c2b9",
            "private_dns": "ip-10-0-101-64.eu-west-1.compute.internal",
            "private_ip": "10.0.101.64",
            "public_dns": "ec2-54-195-78-218.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.78.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-077f63f041d56fc60",
            "domain": "vpc",
            "id": "eipalloc-04da5ed41c2914670",
            "network_interface": "eni-02cfc5aa2cf0ec182",
            "private_dns": "ip-10-0-102-108.eu-west-1.compute.internal",
            "private_ip": "10.0.102.108",
            "public_dns": "ec2-54-74-8-64.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.8.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09d040533692c5731",
            "domain": "vpc",
            "id": "eipalloc-0401212de6e4a9ff0",
            "network_interface": "eni-0e8fe818a799e8630",
            "private_dns": "ip-10-0-103-49.eu-west-1.compute.internal",
            "private_ip": "10.0.103.49",
            "public_dns": "ec2-54-155-29-219.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.29.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:internet-gateway/igw-058965625408e5098",
            "id": "igw-058965625408e5098",
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07935963318614df7",
            "id": "nat-0ffcd565b3fedb438",
            "network_interface_id": "eni-088364b5fc5b0c2b9",
            "private_ip": "10.0.101.64",
            "public_ip": "54.195.78.218",
            "subnet_id": "subnet-01590903ae78887cf",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04da5ed41c2914670",
            "id": "nat-0419de4760530f848",
            "network_interface_id": "eni-02cfc5aa2cf0ec182",
            "private_ip": "10.0.102.108",
            "public_ip": "54.74.8.64",
            "subnet_id": "subnet-0987e72652938202c",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0401212de6e4a9ff0",
            "id": "nat-03afdc9a326751767",
            "network_interface_id": "eni-0e8fe818a799e8630",
            "private_ip": "10.0.103.49",
            "public_ip": "54.155.29.219",
            "subnet_id": "subnet-0fc399e80dc48a622",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-046855d1828eddf431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ffcd565b3fedb438",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046855d1828eddf43",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-048ea588f3e013f431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0419de4760530f848",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048ea588f3e013f43",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f676410c9d11804a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03afdc9a326751767",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f676410c9d11804a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058965625408e5098",
            "id": "r-rtb-013297e476169818f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013297e476169818f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-046855d1828eddf43",
            "owner_id": "436628946705",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ffcd565b3fedb438",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-048ea588f3e013f43",
            "owner_id": "436628946705",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0419de4760530f848",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f676410c9d11804a",
            "owner_id": "436628946705",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03afdc9a326751767",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-013297e476169818f",
            "owner_id": "436628946705",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058965625408e5098",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb979f8bb964584d",
            "route_table_id": "rtb-046855d1828eddf43",
            "subnet_id": "subnet-0edf31facd6d57551"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b160ce33058805b5",
            "route_table_id": "rtb-048ea588f3e013f43",
            "subnet_id": "subnet-01dccbf2b393232f9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09457373610951c41",
            "route_table_id": "rtb-0f676410c9d11804a",
            "subnet_id": "subnet-04d945d670cd92fef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033bb8e1956da3098",
            "route_table_id": "rtb-013297e476169818f",
            "subnet_id": "subnet-01590903ae78887cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b19a9eb3c698146",
            "route_table_id": "rtb-013297e476169818f",
            "subnet_id": "subnet-0987e72652938202c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afeecb319b52f5eb",
            "route_table_id": "rtb-013297e476169818f",
            "subnet_id": "subnet-0fc399e80dc48a622"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-0edf31facd6d57551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0edf31facd6d57551",
            "map_public_ip_on_launch": false,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-01dccbf2b393232f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01dccbf2b393232f9",
            "map_public_ip_on_launch": false,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-04d945d670cd92fef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04d945d670cd92fef",
            "map_public_ip_on_launch": false,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-01590903ae78887cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-01590903ae78887cf",
            "map_public_ip_on_launch": true,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-0987e72652938202c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0987e72652938202c",
            "map_public_ip_on_launch": true,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:subnet/subnet-0fc399e80dc48a622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0fc399e80dc48a622",
            "map_public_ip_on_launch": true,
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:vpc/vpc-0fc92757c50bc5207",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033f6a1944d26e63f",
            "default_route_table_id": "rtb-0eeffe8fd40a97fa2",
            "default_security_group_id": "sg-0ce78c41e36b4e2a5",
            "dhcp_options_id": "dopt-722b0a15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fc92757c50bc5207",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eeffe8fd40a97fa2",
            "owner_id": "436628946705",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436628946705:vpc-endpoint/vpce-01bcd18f40f5da8d7",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.218.0.0/17"
            ],
            "id": "vpce-01bcd18f40f5da8d7",
            "owner_id": "436628946705",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-013297e476169818f",
              "rtb-046855d1828eddf43",
              "rtb-048ea588f3e013f43",
              "rtb-0f676410c9d11804a"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "pokemon-vpc",
              "Owner": "ciberado",
              "Project": "terraform-pokemon-demo"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fc92757c50bc5207"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}